[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyc_utils"
version = "0.1.1"
description = "Fast utilities for Python, with optional C extensions"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{name = "PietraVivente"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
